--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-27  Francisco Javier F. Serrador  <serrador@openshine.com>
+
+	* es.po: Updated Spanish translation.
+
 2006-07-27  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
