--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-29  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Updated French translation.
+
 2006-07-27  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
@@ -1158,7 +1162,7 @@
 2005-08-28  Mohammad DAMT  <mdamt@gnome.org>
 
 	* id.po: Updated Indonesian translation.
-	
+
 2005-08-28  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
