--- a/po/fr.po
+++ b/po/fr.po
@@ -3,7 +3,7 @@
 # This file is distributed under the same license as the nautilus package.
 #
 # Jean-Michel Ardantz <jmardantz@ifrance.com>, 2000.
-# Maintainer: Christophe Merlet (RedFox) <redfox@redfoxcenter.org>, 2001-2005.
+# Maintainer: Christophe Merlet (RedFox) <redfox@redfoxcenter.org>, 2001-2006.
 # Christophe Fergeau <teuf@users.sourceforge.net>, 2001-2002.
 # Sébastien Bacher <seb128@debian.org>, 2004.
 # Vincent Carriere <carriere_vincent@yahoo.fr>, 2005.
@@ -15,9 +15,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus 2.14.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-05-25 11:40+0200\n"
-"PO-Revision-Date: 2006-05-17 00:59+0100\n"
-"Last-Translator: Christophe Bliard <christophe.bliard@trux.info>\n"
+"POT-Creation-Date: 2006-07-29 14:09+0200\n"
+"PO-Revision-Date: 2006-07-29 14:09+0200\n"
+"Last-Translator: Christophe Merlet (RedFox) <redfox@redfoxcenter.org>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4677,7 +4677,7 @@ msgid ""
 "Choose the order of information to appear beneath icon names. More "
 "information will appear when zooming in closer."
 msgstr ""
-"Choisissez l'ordre des informations apparaissant sous le nom des icônes.\n"
+"Choisissez l'ordre des informations apparaissant sous le nom des icônes. "
 "Plus vous zoomez sur un élément et plus les informations qui apparaîtront "
 "seront nombreuses."
 
@@ -5301,7 +5301,7 @@ msgstr "Veuillez essayer à nouveau."
 
 #: ../src/nautilus-property-browser.c:1184
 msgid "Sorry, but you can't replace the reset image."
-msgstr "Désolé, mais vous ne pouvez pas remplacer l'image Initialiser"
+msgstr "Désolé, mais vous ne pouvez pas remplacer l'image Initialiser."
 
 #: ../src/nautilus-property-browser.c:1185
 msgid "Reset is a special image that cannot be deleted."
@@ -5687,12 +5687,12 @@ msgstr "É_dition"
 #. name, stock id, label
 #: ../src/nautilus-window-menus.c:614
 msgid "_View"
-msgstr "_Affichage"
+msgstr "Afficha_ge"
 
 #. name, stock id, label
 #: ../src/nautilus-window-menus.c:615
 msgid "_Help"
-msgstr "Aid_e"
+msgstr "_Aide"
 
 #. name, stock id, label
 #. name, stock id
