--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-31  Hendrik Richter  <hendrikr@gnome.org>
+
+	* de.po: Updated German translation.
+
 2006-07-29  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
