--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2006-08-01  Martin Wehner  <martin.wehner@gmail.com>
 
+	* libnautilus-private/nautilus-search-engine-beagle.c:
+	(nautilus_search_engine_beagle_new): Check whether daemon is
+	running as beagle_client_new doesn't fail when a stale socket
+	file exists.
+
+	Patch from Jürg Billeter <j@bitron.ch>
+
+2006-08-01  Martin Wehner  <martin.wehner@gmail.com>
+
 	* src/file-manager/fm-icon-container.c (fm_icon_container_get_icon_images):
 	Only pass TRUE for embedding_text if we actually read a top-left text.
 	Based on patch from Rene Hausleitner (#335435)
