--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+Major changes in 2.14.3 are:
+* Translation updates
+* Fix selection box width calculation
+* Improve file permission handling
+* Fix progress dialog showing the wrong file
+* Use less memory when thumbnailing
+* Improved sorting in the places sidebar
+* Improved beagle daemon detection
+* Fix crashes
+
 Major changes in 2.14.1 are:
 * Translation updates
 * Code cleanups
