--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+=== nautilus 2.14.3 ===
+
+2006-08-01  Martin Wehner  <martin.wehner@gmail.com>
+
+	* NEWS:
+	Update for release
+
+	* configure.in:
+	Require eel 2.14.3 and bump version.
+
 2006-08-01  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-search-engine-beagle.c:
