--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-08-01  Subhransu Behera  <arya_subhransu@yahoo.co.in>
+
+	* or.po: Added New File for Oriya Translation.
+	* LINGUAS: Added Oriya (or) to The List of Languages.
+
 2006-07-31  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation.
