Added Entry for Updated Oriya Translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2006-08-01  Subhransu Behera  <arya_subhransu@yahoo.co.in>
 
+	* or.po: Updated Oriya Translation.
+
+2006-08-01  Subhransu Behera  <arya_subhransu@yahoo.co.in>
+
 	* or.po: Added New File for Oriya Translation.
 	* LINGUAS: Added Oriya (or) to The List of Languages.
 
