--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-02  Ahmad Riza H Nst  <rizahnst@eriagempita.co.id>
+
+	* id.po: updated.
+
 2006-08-01  Jovan Naumovski  <jovan@lugola.net>
 
 	* mk.po: Updated Macedonian translation.
