--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-02  Takeshi AIHANA <takeshi.aihana@gmail.com>
+
+	* ja.po: Updated Japanese translation.
+
 2006-07-29  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
