--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-08-05  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation with
+	bugfixes prompted by Zlatko Popov
+
 2006-08-03  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by Ivar Smolin.
