Translation updated by Ivar Smolin.
2006-08-05  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: nautilus 2.14\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-07-16 14:37+0200\n"
-"PO-Revision-Date: 2006-07-16 20:04+0300\n"
+"PO-Revision-Date: 2006-08-03 14:36+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -1553,7 +1553,7 @@ msgstr "Faili äraviskamine:"
 #: ../libnautilus-private/nautilus-file-operations.c:2052
 #: ../libnautilus-private/nautilus-file-operations.c:2063
 msgid "Moving"
-msgstr "Liigutamine"
+msgstr "Ümbertõstmine"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2053
 msgid "Preparing to Move to Trash..."
@@ -1575,7 +1575,7 @@ msgstr "Ettevalmistus liigutamiseks..."
 
 #: ../libnautilus-private/nautilus-file-operations.c:2065
 msgid "Finishing Move..."
-msgstr "Liigutamise lõpetamine..."
+msgstr "Ümbertõstmise lõpetamine..."
 
 #. localizers: progress dialog title
 #: ../libnautilus-private/nautilus-file-operations.c:2073
@@ -2989,21 +2989,21 @@ msgstr "Näita selles menüüd olevate skriptide kataloogi"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6687
 msgid "Prepare the selected files to be moved with a Paste command"
-msgstr "Valmistab valitud failid ette liigutamiseks käsuga Aseta failid"
+msgstr "Valitud failid ettevalmistamine liigutamiseks käsuga Aseta failid"
 
 #. name, stock id
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6691
 msgid "Prepare the selected files to be copied with a Paste command"
-msgstr "Valmistab valitud failid ette kopeerimiseks Aseta käsuga"
+msgstr "Valitud failide ettevalmistamine kopeerimiseks Aseta käsuga"
 
 #. name, stock id
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6695
 msgid "Move or copy files previously selected by a Cut or Copy command"
 msgstr ""
-"Liigutab või asetab failid, mis eelnevalt valitud käskudega Lõika fail või "
-"Kopeeri fail"
+"Eelnevalt Lõika või Kopeeri käskudega valitud failide asetamine või "
+"ümbertõstmine"
 
 #. We make accelerator "" instead of null here to not inherit the stock
 #. accelerator for paste
@@ -3678,7 +3678,7 @@ msgstr "Kataloogis %s nähtavad veerud"
 
 #: ../src/file-manager/fm-list-view.c:1941
 msgid "Choose the order of information to appear in this folder."
-msgstr "Vali, mismoodi selles kataloogis teavet järjestatakse"
+msgstr "Vali, mismoodi selles kataloogis andmeid järjestatakse"
 
 #. name, stock id
 #: ../src/file-manager/fm-list-view.c:1983
@@ -4852,7 +4852,7 @@ msgstr "Määra avamiseks asukoht"
 
 #: ../src/nautilus-navigation-window-menus.c:437
 msgid "Clea_r History"
-msgstr "_Ajaloo tühjendamine"
+msgstr "Puhasta a_jalugu"
 
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:438
@@ -5589,7 +5589,7 @@ msgstr "_Arvuti"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:687
 msgid "Go to the computer location"
-msgstr "Liigu arvuti asukohta"
+msgstr "Liikumine arvuti asukohale"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:690
@@ -5599,7 +5599,7 @@ msgstr "_Võrk"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:691
 msgid "Go to the network location"
-msgstr "Liigu võrgu asukohta"
+msgstr "Liikumine võrgu asukohta"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:694
@@ -5629,7 +5629,7 @@ msgstr "_CD/DVD looja"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:703
 msgid "Go to the CD/DVD Creator"
-msgstr "Liigu CD/DVD loojasse"
+msgstr "Liikumine CD/DVD-loojasse"
 
 #: ../src/nautilus-window-menus.c:729
 msgid "_Up"
