Update British English translation, and made sure Trash wasn't left
2006-08-06  Bastien Nocera  <hadess@hadess.net>

	* en_GB.po: Update British English translation, and
	made sure Trash wasn't left untranslated (Closes: #325088)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-08-06  Bastien Nocera  <hadess@hadess.net>
+
+	* en_GB.po: Update British English translation, and
+	made sure Trash wasn't left untranslated (Closes: #325088)
+
 2006-08-05  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation with
