--- a/po/th.po
+++ b/po/th.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: th\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-07-28 17:03+0700\n"
-"PO-Revision-Date: 2006-07-28 17:06+0700\n"
+"POT-Creation-Date: 2006-08-06 23:37+0700\n"
+"PO-Revision-Date: 2006-08-06 23:38+0700\n"
 "Last-Translator: Theppitak Karoonboonyanan <thep@linux.thai.net>\n"
 "Language-Team: Thai <L10N@opentle.org>\n"
 "MIME-Version: 1.0\n"
@@ -5105,7 +5105,7 @@ msgstr "ถ_อยกลับ"
 
 #: src/nautilus-navigation-window-menus.c:496
 msgid "Go to the previous visited location"
-msgstr "ไปตำแหน่งที่ไปเยี่ยมมาก่อนจากนี้"
+msgstr "ไปตำแหน่งที่เปิดก่อนหน้านี้"
 
 #: src/nautilus-navigation-window-menus.c:497
 msgid "Back history"
@@ -5117,7 +5117,7 @@ msgstr "เดินห_น้า"
 
 #: src/nautilus-navigation-window-menus.c:513
 msgid "Go to the next visited location"
-msgstr "ไปตำแหน่งที่ไปเยี่ยมมาถัดจากนี้"
+msgstr "ไปตำแหน่งที่เปิดถัดจากนี้"
 
 #: src/nautilus-navigation-window-menus.c:514
 msgid "Forward history"
