Close the about dialog. Patch from Matthias Clasen. Closes bug #341515.
2006-08-07  Kjartan Maraas  <kmaraas@gnome.org>

	* src/nautilus-window-menus.c: (action_about_nautilus_callback):
	Close the about dialog. Patch from Matthias Clasen. Closes
	bug #341515.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-08-07  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* src/nautilus-window-menus.c: (action_about_nautilus_callback):
+	Close the about dialog. Patch from Matthias Clasen. Closes
+	bug #341515.
+
 === nautilus 2.14.3 ===
 
 2006-08-01  Martin Wehner  <martin.wehner@gmail.com>
