--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-08-08  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file-operations.c:
+	Handle desktop drops from panel. (#347673)
+	Patch from Christian Neumair
+
 2006-08-04  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-directory-async.c:
