Fix down when in the rightmost column in the next to last row (#316117)
2006-08-08  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c:
	Fix down when in the rightmost column in the next to last row (#316117)
	Based on patch from Nelson Benitez

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-08-08  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-icon-container.c:
+	Fix down when in the rightmost column in the next to last row (#316117)
+	Based on patch from Nelson Benitez
+
+2006-08-08  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-file-operations.c:
 	Handle desktop drops from panel. (#347673)
 	Patch from Christian Neumair
