--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-08-08  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-directory-background.c:
+	Do background change comparison in eel instead (#349961)
+	Patch from Matthias Clasen
+	
+2006-08-08  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-container.c:
 	Fix down when in the rightmost column in the next to last row (#316117)
 	Based on patch from Nelson Benitez
