Follow symlinks when reading .hidden files.
2006-08-08  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-directory-async.c (read_dot_hidden_file):
	Follow symlinks when reading .hidden files.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-08-08  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-directory-async.c (read_dot_hidden_file):
+	Follow symlinks
+
+2006-08-08  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-directory-background.c:
 	Do background change comparison in eel instead (#349961)
 	Patch from Matthias Clasen
