Update for release
2006-08-08  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

	* configure.in:
	Require new eel.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-08-08  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for release
+
+	* configure.in:
+	Require new eel.
+
 2006-08-08  Vincent Untz  <vuntz@gnome.org>
 
 	Use GTK+ to handle recent documents.
