--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Major changes in 2.15.91 are:
+* Use gtk recent files code
+* Fix file change notification regression
+* Don't display raw form of selinux contexts
+* Import lates EggSequence with bugfixes
+* DnD fixes
+* Read .hidden symlinks
+* Fix down navigation in last column, next to last row
+
 Major changes in 2.15.90 are:
 * Submenu support for extensions
 * Improved beagle daemon detection
