Post release version bump
2006-08-08  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== nautilus 2.15.91 ===

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,8 @@
 
 	* tr.po: Updated Turkish Translation
 
+=== nautilus 2.15.91 ===
+	
 2006-08-07  Inaki Larranaga  <dooteo@euskalgnu.org>
 
 	* eu.po: Updated Basque translation.
