Updated Latvian translation.
2006-08-09  Raivis Dejus  <orvils@gmail.com>

        * lv.po: Updated Latvian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-09  Raivis Dejus  <orvils@gmail.com>
+
+        * lv.po: Updated Latvian translation.
+
 2006-08-08  Baris Cicek <baris@teamforce.name.tr>
 
 	* tr.po: Updated Turkish Translation
