--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-09  Raivis Dejus  <orvils@gmail.com>
+
+        * lv.po: Updated Latvian translation.
+
 2006-08-05  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated by Ivar Smolin.
