Updated nautilus zh_CN translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-09  Funda Wang  <fundawang@linux.net.cn>
+
+	* zh_CN.po: Updated Simplified Chinese translation.
+
 2006-08-09  Raivis Dejus  <orvils@gmail.com>
 
         * lv.po: Updated Latvian translation.
