--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-09  Inaki Larranaga  <dooteo@euskalgnu.org>
+
+	* eu.po: Updated Basque translation.
+
 2006-08-09  Raivis Dejus  <orvils@gmail.com>
 
         * lv.po: Updated Latvian translation.
