--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-08-10  Guntupalli Karunakar  <karunakar@freedomink.org>
+
+        * dz.po: Updated Dzongkha translation by
+        Dzongkhalinux team, DIT
+
 2006-08-09  Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Updated Simplified Chinese translation.
