Updated Spanish translation.
2006-08-11  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es.po: Updated Spanish translation.

--- a/po/es.po
+++ b/po/es.po
@@ -1,8 +1,5 @@
-# translation of es.po to Spanish
-# Nautilus's Spanish translation file.
 # Copyright © 2000-2003, 2006 Free Software Foundation, Inc.
 # This file is distributed under the same license as the nautilus package.
-#
 # Jorge Carrasquilla Soares <jorge@conectiva.com.br>, 2000.
 # Carlos Perelló Marín <carlos@gnome-db.org>, 2000,2002.
 # Ismael Olea <ismael@olea.org>, 2001.
@@ -13,7 +10,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-07-25 11:00+0200\n"
-"PO-Revision-Date: 2006-07-27 22:38+0200\n"
+"PO-Revision-Date: 2006-08-11 20:49+0200\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -746,7 +743,7 @@ msgstr "Icono de «Servidores de red» visible en el escritorio"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:66
 msgid "Only show folders in the tree sidebar"
-msgstr "Mostrar sólo las carpetas en el árbol del panel lateral"
+msgstr "Muestra sólo las carpetas en el árbol del panel lateral"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:67
 msgid ""
@@ -1587,7 +1584,7 @@ msgstr ""
 #: ../libnautilus-private/nautilus-file-operations.c:1196
 #, c-format
 msgid "The file already exists in \"%s\".  Replacing it will overwrite its contents."
-msgstr "El archivo ya existe en «%s». -- Reemplazarlo sobreescribirá su contenido."
+msgstr "El archivo ya existe en «%s». Reemplazarlo sobreescribirá su contenido."
 
 # #-#-#-#-#  nautilus-es.po (Nautilus)  #-#-#-#-#
 # src/file-manager/dfos-xfer.c:419 src/file-manager/dfos-xfer.c:430
@@ -2732,7 +2729,7 @@ msgstr "Cambiar el modo de administración de archivos"
 
 #: ../nautilus-file-management-properties.desktop.in.h:2
 msgid "File Management"
-msgstr "Administración de archivos"
+msgstr "Gestión de archivos"
 
 # src/file-manager/fm-directory-view.c:2140
 # src/file-manager/fm-directory-view.c:2257
@@ -2752,7 +2749,7 @@ msgstr "Vea su carpeta personal en el administrador de archivos Nautilus"
 
 #: ../nautilus.desktop.in.h:1
 msgid "Browse the file system with the file manager"
-msgstr "Navegue por el sistema de archivos con el administrador de archivos"
+msgstr "Navegue por el sistema de archivos con el gestor de archivos"
 
 # src/file-manager/fm-properties-window.c:1526
 #: ../nautilus.desktop.in.h:2
@@ -2761,7 +2758,7 @@ msgstr "Navegador de archivos"
 
 #: ../src/Nautilus_shell.server.in.h:1
 msgid "Factory for Nautilus shell and file manager"
-msgstr "Fábrica para el shell y administrador de archivos Nautilus"
+msgstr "Fábrica para el shell y gestor de archivos Nautilus"
 
 # src/nautilus-shell.c:157
 #: ../src/Nautilus_shell.server.in.h:2
@@ -2770,7 +2767,7 @@ msgstr "Fábrica de Nautilus"
 
 #: ../src/Nautilus_shell.server.in.h:3
 msgid "Nautilus metafile factory"
-msgstr "Fábrica de meta-archivo Nautilus"
+msgstr "Fábrica de metaarchivos Nautilus"
 
 # src/nautilus-window-manage-views.c:184
 # src/nautilus-window-manage-views.c:217
@@ -2789,7 +2786,7 @@ msgstr ""
 
 #: ../src/Nautilus_shell.server.in.h:6
 msgid "Produces metafile objects for accessing Nautilus metadata"
-msgstr "Produce objetos meta-archivo para acceder a meta-datos de Nautilus"
+msgstr "Produce objetos metaarchivo para acceder a metadatos de Nautilus"
 
 # src/nautilus-sidebar.c:424
 #: ../src/file-manager/fm-desktop-icon-view.c:617
@@ -2876,7 +2873,7 @@ msgstr "La vista de escritorio ha encontrado un error mientras se iniciaba."
 # libnautilus-private/nautilus-global-preferences.c:693
 #: ../src/file-manager/fm-desktop-icon-view.c:802
 msgid "Display this location with the desktop view."
-msgstr "Mostrar este lugar con la vista de escritorio."
+msgstr "Muestra este lugar con la vista de escritorio."
 
 # src/file-manager/fm-directory-view.c:1855
 #: ../src/file-manager/fm-directory-view.c:665
@@ -4177,7 +4174,7 @@ msgstr "La vista de iconos ha encontrado un error mientras se iniciaba."
 # libnautilus-private/nautilus-global-preferences.c:693
 #: ../src/file-manager/fm-icon-view.c:2767
 msgid "Display this location with the icon view."
-msgstr "Mostrar este lugar con la vista de iconos."
+msgstr "Muestra este lugar con la vista de iconos."
 
 #: ../src/file-manager/fm-list-model.c:372
 #: ../src/file-manager/fm-tree-model.c:1213
@@ -4240,7 +4237,7 @@ msgstr "La vista de lista ha encontrado un error mientras se iniciaba."
 # libnautilus-private/nautilus-global-preferences.c:693
 #: ../src/file-manager/fm-list-view.c:2715
 msgid "Display this location with the list view."
-msgstr "Mostrar este lugar con la vista de lista."
+msgstr "Muestra este lugar con la vista de lista."
 
 #: ../src/file-manager/fm-properties-window.c:487
 msgid "You can't assign more than one custom icon at a time!"
@@ -5243,7 +5240,7 @@ msgstr "_Nivel de ampliación predeterminado:"
 # libnautilus-private/nautilus-global-preferences.c:149
 #: ../src/nautilus-file-management-properties.glade.h:47
 msgid "Display"
-msgstr "Mostrar"
+msgstr "Visualización"
 
 #: ../src/nautilus-file-management-properties.glade.h:48
 msgid "File Management Preferences"
@@ -5669,7 +5666,7 @@ msgstr "El lugar del histórico no existe."
 
 #: ../src/nautilus-navigation-window-menus.c:426
 msgid "_Go"
-msgstr "_Ir a"
+msgstr "_Ir"
 
 # src/nautilus-window-menus.c:1235
 #. name, stock id, label
@@ -6205,13 +6202,13 @@ msgstr "Abrir _lugar…"
 
 #: ../src/nautilus-spatial-window.c:865
 msgid "Close P_arent Folders"
-msgstr "Cerrar las carpetas a_ntecesoras"
+msgstr "Cerrar las carpetas co_ntenedoras"
 
 # libnautilus-private/nautilus-global-preferences.c:165
 #. name, stock id, label
 #: ../src/nautilus-spatial-window.c:866
 msgid "Close this folder's parents"
-msgstr "Cierra las antecesoras de esta carpeta"
+msgstr "Cierra las carpetas contenedoras de esta carpeta"
 
 #: ../src/nautilus-spatial-window.c:868
 msgid "Clos_e All Folders"
@@ -6443,13 +6440,13 @@ msgstr "Deshacer el último cambio del texto"
 
 #: ../src/nautilus-window-menus.c:616
 msgid "Open _Parent"
-msgstr "Abrir ant_ecesor"
+msgstr "Carpeta cont_enedora"
 
 # libnautilus-private/nautilus-file.c:2586
 #. name, stock id, label
 #: ../src/nautilus-window-menus.c:617
 msgid "Open the parent folder"
-msgstr "Abre la carpeta antecesora"
+msgstr "Abre la carpeta contenedora"
 
 # #-#-#-#-#  nautilus-es.po (Nautilus)  #-#-#-#-#
 # components/music/nautilus-music-view.c:1158
@@ -6470,7 +6467,7 @@ msgstr "_Recargar"
 #. name, stock id
 #: ../src/nautilus-window-menus.c:631
 msgid "_Contents"
-msgstr "Í_ndice"
+msgstr "_Contenido"
 
 # src/nautilus-window-manage-views.c:184
 # src/nautilus-window-manage-views.c:217
@@ -6483,7 +6480,7 @@ msgstr "Muestra la ayuda de Nautilus"
 #. name, stock id
 #: ../src/nautilus-window-menus.c:635
 msgid "_About"
-msgstr "Acerca _de"
+msgstr "_Acerca de"
 
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:636
@@ -6500,7 +6497,7 @@ msgstr "_Ampliar"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:640 ../src/nautilus-zoom-control.c:96
 msgid "Show the contents in more detail"
-msgstr "Mostrar los contenidos con más detalles"
+msgstr "Muestra el contenido con más detalle"
 
 # src/file-manager/fm-directory-view.c:2270
 #. name, stock id
@@ -6637,5 +6634,5 @@ msgstr "Establece el nivel de ampliación de la vista actual"
 
 #: ../src/network-scheme.desktop.in.h:2
 msgid "View your network servers in the Nautilus file manager"
-msgstr "Ver sus servidores de red en el administrador de archivos Nautilus"
+msgstr "Ver los servidores de la red en el administrador de archivos Nautilus"
 
