--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-11  Francisco Javier F. Serrador  <serrador@openshine.com>
+
+	* es.po: Updated Spanish translation.
+
 2006-08-10  Guntupalli Karunakar  <karunakar@freedomink.org>
 
         * dz.po: Updated Dzongkha translation by
