Translation updated by Ivar Smolin.
2006-08-13  Priit Laes  <plaes@cvs.gnome.org>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: nautilus 2.14\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-07-16 14:37+0200\n"
-"PO-Revision-Date: 2006-08-03 14:36+0300\n"
+"PO-Revision-Date: 2006-08-11 08:48+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -634,6 +634,9 @@ msgid ""
 "setting is to avoid thumbnailing large images that may take a long time to "
 "load or use lots of memory."
 msgstr ""
+"Sellest suurusest (baitides) suurematest piltidest pisipilte ei tehta. Selle "
+"valiku eesmärk on välistada olukorrad, kus suurtest piltidest pisipiltide "
+"tegemine võtab kaua aega ja kasutab palju mälu."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:60
 msgid "List of possible captions on icons"
@@ -696,27 +699,27 @@ msgstr "Sans 10"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:75
 msgid "Show folders first in windows"
-msgstr "Näita katalooge aknais esimestena"
+msgstr "Akendes kataloogide esimesena näitamine"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:76
 msgid "Show location bar in new windows"
-msgstr "Näita uutes akendes asukohariba"
+msgstr "Uutes akendes asukohariba näitamine"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:77
 msgid "Show mounted volumes on the desktop"
-msgstr "Näita ühendatud kettaseadmeid töölaual"
+msgstr "Ühendatud kettaseadmete näitamine töölaual"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:78
 msgid "Show side pane in new windows"
-msgstr "Näita uues aknas külgpaani"
+msgstr "Uues aknas külgpaani näitamine"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:79
 msgid "Show status bar in new windows"
-msgstr "Näita uutes akendes olekuriba"
+msgstr "Uutes akendes olekuriba näitamine"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:80
 msgid "Show toolbar in new windows"
-msgstr "Näita uutes akendes tööriistariba"
+msgstr "Uutes akendes tööriistariba näitamine"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:81
 msgid "Side pane view"
@@ -761,6 +764,9 @@ msgid ""
 "The default sort-order for items in the icon view. Possible values are \"name"
 "\", \"size\", \"type\", \"modification_date\", and \"emblems\"."
 msgstr ""
+"Ikoonivaate kirjete vaikimisi sortimisjärjekord. Võimalikud väärtused on "
+"\"name\" (nimi), \"size\" (suurus), \"type\" (tüüp), \"modification_date\" "
+"(muutmisaeg), ja \"emblems\" (embleemid)."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:87
 msgid ""
