--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-15  Satoru SATOH <ss@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation.
+
 2006-08-12  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
