--- a/po/et.po
+++ b/po/et.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-11 00:23+0200\n"
-"PO-Revision-Date: 2006-08-11 08:48+0300\n"
+"PO-Revision-Date: 2006-08-14 20:44+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -765,7 +765,7 @@ msgid ""
 "\", \"size\", \"type\", \"modification_date\", and \"emblems\"."
 msgstr ""
 "Ikoonivaate kirjete vaikimisi sortimisjärjekord. Võimalikud väärtused on "
-"\"name\" (nimi), \"size\" (suurus), \"type\" (tüüp), \"modification_date\" "
+"\"name\" (nimi), \"size\" (suurus), \"type\" (liik), \"modification_date\" "
 "(muutmisaeg), ja \"emblems\" (embleemid)."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:87
@@ -773,6 +773,9 @@ msgid ""
 "The default sort-order for the items in the list view. Possible values are "
 "\"name\", \"size\", \"type\", and \"modification_date\"."
 msgstr ""
+"Loendivaate kirjete vaikimisi sortimisjärjekord. Võimalikud väärtused on "
+"\"name\" (nime järgi), \"size\" (suuruse järgi), \"type\" (liigi järgi) ja "
+"\"modification_date\" (muutmisaja järgi)."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:88
 msgid "The default width of the side pane in new windows."
@@ -857,7 +860,7 @@ msgstr "Millal näidata kataloogis olevate kirjete arvu"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:103
 msgid "When to show preview text in icons"
-msgstr "Millal ikoonide eelvaadet näidata"
+msgstr "Millal näidata ikoonide eelvaadet"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:104
 msgid "When to show thumbnails of image files"
@@ -873,7 +876,7 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:107
 msgid "Whether to ask for confirmation when moving files to trash"
-msgstr "Kas küsida kinnitust kui faile liigutatakse prügikasti"
+msgstr "Kas küsida kinnitust kui faile tõstetakse prügikasti"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:108
 msgid "Whether to enable immediate deletion"
@@ -963,7 +966,7 @@ msgstr "Faili suurus."
 
 #: ../libnautilus-private/nautilus-column-utilities.c:58
 msgid "Type"
-msgstr "Tüüp"
+msgstr "Liik"
 
 #: ../libnautilus-private/nautilus-column-utilities.c:59
 msgid "The type of the file."
@@ -1021,11 +1024,11 @@ msgstr "Failiõigused, kaheksandkujul."
 
 #: ../libnautilus-private/nautilus-column-utilities.c:113
 msgid "MIME Type"
-msgstr "MIME-tüüp"
+msgstr "MIME-liik"
 
 #: ../libnautilus-private/nautilus-column-utilities.c:114
 msgid "The mime type of the file."
-msgstr "Faili mime tüüp."
+msgstr "Faili MIME-liik."
 
 #: ../libnautilus-private/nautilus-column-utilities.c:120
 msgid "SELinux Context"
@@ -1177,12 +1180,12 @@ msgstr "Sihtkoht:"
 #: ../libnautilus-private/nautilus-file-operations.c:723
 #: ../libnautilus-private/nautilus-file-operations.c:733
 msgid "Error while moving."
-msgstr "Viga liigutamisel."
+msgstr "Viga ümbertõstmisel."
 
 #: ../libnautilus-private/nautilus-file-operations.c:671
 #, c-format
 msgid "\"%s\" cannot be moved because it is on a read-only disk."
-msgstr "\"%s\" pole võimalik liigutada kuna asub kirjutuskaitsega kettal."
+msgstr "\"%s\" pole võimalik ümber tõsta kuna asub kirjutuskaitsega kettal."
 
 #: ../libnautilus-private/nautilus-file-operations.c:681
 #: ../libnautilus-private/nautilus-file-operations.c:687
@@ -1209,8 +1212,8 @@ msgid ""
 "\"%s\" cannot be moved because you do not have permissions to change it or "
 "its parent folder."
 msgstr ""
-"Kirjet \"%s\" pole võimalik liigutada, kuna sul puuduvad õigused muuta seda "
-"või selle ülemkataloogi."
+"Kirjet \"%s\" pole võimalik ümber tõsta, kuna sul puuduvad õigused muuta "
+"seda või selle ülemkataloogi."
 
 #: ../libnautilus-private/nautilus-file-operations.c:724
 #, c-format
@@ -1218,7 +1221,7 @@ msgid ""
 "Cannot move \"%s\" because it or its parent folder are contained in the "
 "destination."
 msgstr ""
-"\"%s\" pole võimalik liigutada, kuna see kataloog või selle kataloogi "
+"\"%s\" pole võimalik ümber tõsta, kuna see kataloog või selle kataloogi "
 "ülemkataloog sisalduvad sihtkohas."
 
 #: ../libnautilus-private/nautilus-file-operations.c:734
@@ -1227,8 +1230,8 @@ msgid ""
 "Cannot move \"%s\" to the trash because you do not have permissions to "
 "change it or its parent folder."
 msgstr ""
-"\"%s\" pole võimalik prügikasti liigutada, sest sul ei ole õigusi muuta seda "
-"kataloogi või selle kataloogi ülemkataloogi."
+"\"%s\" pole võimalik prügikasti tõsta, sest sul pole seda kataloogi või "
+"selle ülemkataloogi muuta."
 
 #: ../libnautilus-private/nautilus-file-operations.c:756
 msgid "Error while copying."
@@ -1255,7 +1258,7 @@ msgstr "Sihtkohas ei ole piisavalt vaba ruumi."
 #: ../libnautilus-private/nautilus-file-operations.c:782
 #, c-format
 msgid "Error while moving to \"%s\"."
-msgstr "Viga \"%s\" liigutamisel."
+msgstr "Viga \"%s\" ümbertõstmisel."
 
 #: ../libnautilus-private/nautilus-file-operations.c:786
 #, c-format
@@ -1278,7 +1281,7 @@ msgstr "Sihtkoha ketas on kirjutuskaitsega."
 #: ../libnautilus-private/nautilus-file-operations.c:813
 #, c-format
 msgid "Error while moving items to \"%s\"."
-msgstr "Viga kirjete liigutamisel \"%s\"."
+msgstr "Viga kirjete ümbertõstmisel asukohta \"%s\"."
 
 #: ../libnautilus-private/nautilus-file-operations.c:820
 #: ../libnautilus-private/nautilus-file-operations.c:824
@@ -1305,7 +1308,7 @@ msgstr "Kas soovid jätkata?"
 #: ../libnautilus-private/nautilus-file-operations.c:856
 #, c-format
 msgid "Error \"%s\" while moving \"%s\"."
-msgstr "Viga \"%s\", \"%s\" liigutamisel."
+msgstr "Viga \"%s\", \"%s\" ümbertõstmisel."
 
 #: ../libnautilus-private/nautilus-file-operations.c:860
 #, c-format
@@ -1325,7 +1328,7 @@ msgstr "Viga \"%s\" kopeerimisel."
 #: ../libnautilus-private/nautilus-file-operations.c:885
 #, c-format
 msgid "Error \"%s\" while moving."
-msgstr "Viga \"%s\" liigutamisel."
+msgstr "Viga \"%s\" ümbertõstmisel."
 
 #: ../libnautilus-private/nautilus-file-operations.c:889
 #, c-format
@@ -1351,7 +1354,7 @@ msgstr "_Jäta vahele"
 #: ../libnautilus-private/nautilus-file-operations.c:1136
 #, c-format
 msgid "Could not move \"%s\" to the new location."
-msgstr "\"%s\" pole võimalik sihtkohta liigutada."
+msgstr "\"%s\" pole võimalik sihtkohta ümber tõsta."
 
 #: ../libnautilus-private/nautilus-file-operations.c:1139
 msgid ""
@@ -1359,7 +1362,7 @@ msgid ""
 "replaced.  If you still want to move the item, rename it and try again."
 msgstr ""
 "Nime juba kasutakse erikirje jaoks ja seda pole võimalik eemaldada ega "
-"asendada. Kui siiski soovid kirjet liigutada, nimeta see ümber ja proovi "
+"asendada. Kui siiski soovid kirjet ümber tõsta, nimeta see ümber ja proovi "
 "uuesti."
 
 #: ../libnautilus-private/nautilus-file-operations.c:1143
@@ -1565,7 +1568,7 @@ msgstr "Tundmatu GnomeVFSXferProgressStatus %d"
 #. localizers: progress dialog title
 #: ../libnautilus-private/nautilus-file-operations.c:2093
 msgid "Moving files to the Trash"
-msgstr "Failide liigutamine prügikasti"
+msgstr "Failide tõstmine prügikasti"
 
 #. localizers: label prepended to the progress count
 #: ../libnautilus-private/nautilus-file-operations.c:2095
@@ -1576,25 +1579,25 @@ msgstr "Faili äraviskamine:"
 #: ../libnautilus-private/nautilus-file-operations.c:2097
 #: ../libnautilus-private/nautilus-file-operations.c:2108
 msgid "Moving"
-msgstr "Ümbertõstmine"
+msgstr "Tõstetakse ümber"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2098
 msgid "Preparing to Move to Trash..."
-msgstr "Ettevalmistus failide prügikasti liigutamiseks..."
+msgstr "Ettevalmistus failide prügikasti tõstmiseks..."
 
 #. localizers: progress dialog title
 #: ../libnautilus-private/nautilus-file-operations.c:2104
 msgid "Moving files"
-msgstr "Failide liigutamine"
+msgstr "Failide ümbertõstmine"
 
 #. localizers: label prepended to the progress count
 #: ../libnautilus-private/nautilus-file-operations.c:2106
 msgid "Moving file:"
-msgstr "Faili liigutamine:"
+msgstr "Faili ümbertõstmine:"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2109
 msgid "Preparing To Move..."
-msgstr "Ettevalmistus liigutamiseks..."
+msgstr "Ettevalmistus ümbertõstmiseks..."
 
 #: ../libnautilus-private/nautilus-file-operations.c:2110
 msgid "Finishing Move..."
@@ -1636,7 +1639,7 @@ msgstr "Faili kopeerimine:"
 #. localizers: label prepended to the name of the current file copied
 #: ../libnautilus-private/nautilus-file-operations.c:2134
 msgid "Copying"
-msgstr "Kopeerimisel"
+msgstr "Kopeeritakse"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2135
 msgid "Preparing To Copy..."
@@ -1652,11 +1655,11 @@ msgstr "Prügikastis ei ole võimalik viitasid tekitada."
 
 #: ../libnautilus-private/nautilus-file-operations.c:2155
 msgid "Files and folders can only be moved into the trash."
-msgstr "Faile ja katalooge saab liigutada ainult prügikasti"
+msgstr "Faile ja katalooge saab tõsta ainult prügikasti"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2178
 msgid "You cannot move this trash folder."
-msgstr "Prügikasti pole võimalik liigutada"
+msgstr "Prügikasti pole võimalik ümber tõsta."
 
 #: ../libnautilus-private/nautilus-file-operations.c:2179
 msgid "You cannot copy this trash folder."
@@ -1668,7 +1671,7 @@ msgstr "Pügikastis hoitakse sinna pandud kirjeid."
 
 #: ../libnautilus-private/nautilus-file-operations.c:2204
 msgid "You cannot move a folder into itself."
-msgstr "Kataloogi pole võimalik liigutada iseendasse."
+msgstr "Kataloogi pole võimalik iseendasse ümber tõsta."
 
 #: ../libnautilus-private/nautilus-file-operations.c:2205
 msgid "You cannot copy a folder into itself."
@@ -1708,7 +1711,7 @@ msgstr "Viga uue kataloogi loomisel."
 #. localizers: the initial name of a new folder
 #: ../libnautilus-private/nautilus-file-operations.c:2391
 msgid "untitled folder"
-msgstr "nimeta kataloog"
+msgstr "nimetu kataloog"
 
 #: ../libnautilus-private/nautilus-file-operations.c:2449
 #, c-format
@@ -1987,11 +1990,11 @@ msgstr "? baiti"
 
 #: ../libnautilus-private/nautilus-file.c:4721
 msgid "unknown type"
-msgstr "tundmatu tüüp"
+msgstr "tundmatu liik"
 
 #: ../libnautilus-private/nautilus-file.c:4724
 msgid "unknown MIME type"
-msgstr "tundmatu MIME tüüp"
+msgstr "tundmatu MIME-liik"
 
 #. Fallback, use for both unknown attributes and attributes
 #. * for which we have no more appropriate default.
@@ -2231,11 +2234,11 @@ msgstr "Valiku ristkülik"
 
 #: ../libnautilus-private/nautilus-icon-container.c:4832
 msgid "Normal Alpha"
-msgstr ""
+msgstr "Tavaline läbipaistvus"
 
 #: ../libnautilus-private/nautilus-icon-container.c:4833
 msgid "Opacity of the normal icons if frame_text is set"
-msgstr ""
+msgstr "Tavaliste ikoonide katvus kui frame_text on määratud"
 
 #: ../libnautilus-private/nautilus-icon-dnd.c:813
 msgid "Switch to Manual Layout?"
@@ -2572,7 +2575,7 @@ msgstr[1] "See avab %d eraldi akent."
 #: ../src/file-manager/fm-directory-view.c:991
 #, c-format
 msgid "Are you sure you want to permanently delete \"%s\"?"
-msgstr "Kas oled kindel, soovid \"%s\" jäädavalt kustutada?"
+msgstr "Kas oled kindel, et soovid \"%s\" jäädavalt kustutada?"
 
 #: ../src/file-manager/fm-directory-view.c:995
 #, c-format
@@ -2621,21 +2624,21 @@ msgstr ""
 #: ../src/file-manager/fm-directory-view.c:2165
 #, c-format
 msgid "\"%s\" selected"
-msgstr "valitud \"%s\""
+msgstr "Valitud \"%s\""
 
 #: ../src/file-manager/fm-directory-view.c:2167
 #, c-format
 msgid "%d folder selected"
 msgid_plural "%d folders selected"
-msgstr[0] "valitud %d kataloog"
-msgstr[1] "valitud %d kataloogi"
+msgstr[0] "Valitud %d kataloog"
+msgstr[1] "Valitud %d kataloogi"
 
 #: ../src/file-manager/fm-directory-view.c:2177
 #, c-format
 msgid " (containing %d item)"
 msgid_plural " (containing %d items)"
-msgstr[0] "(sisaldab \"%d\" kirje)"
-msgstr[1] "(sisaldab \"%d\" kirjet)"
+msgstr[0] " (sisaldab \"%d\" kirje)"
+msgstr[1] " (sisaldab \"%d\" kirjet)"
 
 #. translators: this is preceded with a string of form 'N folders' (N more than 1)
 #: ../src/file-manager/fm-directory-view.c:2188
@@ -2648,22 +2651,22 @@ msgstr[1] " (sisaldab kokku %d kirjet)"
 #: ../src/file-manager/fm-directory-view.c:2204
 #, c-format
 msgid "\"%s\" selected (%s)"
-msgstr "valitud \"%s\" (%s)"
+msgstr "Valitud \"%s\" (%s)"
 
 #: ../src/file-manager/fm-directory-view.c:2208
 #, c-format
 msgid "%d item selected (%s)"
 msgid_plural "%d items selected (%s)"
-msgstr[0] "valitud %d kirje (%s)"
-msgstr[1] "valitud %d kirjet (%s)"
+msgstr[0] "Valitud %d kirje (%s)"
+msgstr[1] "Valitud %d kirjet (%s)"
 
 #. Folders selected also, use "other" terminology
 #: ../src/file-manager/fm-directory-view.c:2216
 #, c-format
 msgid "%d other item selected (%s)"
 msgid_plural "%d other items selected (%s)"
-msgstr[0] "valitud %d muud kirjet (%s)"
-msgstr[1] "valitud %d muud kirjet (%s)"
+msgstr[0] "Valitud %d muud kirjet (%s)"
+msgstr[1] "Valitud %d muud kirjet (%s)"
 
 #: ../src/file-manager/fm-directory-view.c:2237
 #, c-format
@@ -2849,7 +2852,7 @@ msgstr ""
 #: ../src/file-manager/fm-tree-view.c:901
 #, c-format
 msgid "\"%s\" will be moved if you select the Paste command"
-msgstr "\"%s\" liigutatakse, kui valid käsu Aseta"
+msgstr "\"%s\" tõstetakse ümber, kui valid käsu Aseta"
 
 #: ../src/file-manager/fm-directory-view.c:5987
 #: ../src/file-manager/fm-tree-view.c:905
@@ -2862,8 +2865,8 @@ msgstr "\"%s\" kopeeritakse, kui valid käsu Aseta"
 msgid "The %d selected item will be moved if you select the Paste command"
 msgid_plural ""
 "The %d selected items will be moved if you select the Paste command"
-msgstr[0] "%d valitud kirje liigutatakse, kui valid käsu Aseta"
-msgstr[1] "%d valitud kirjet liigutatakse, kui valid käsu Aseta"
+msgstr[0] "%d valitud kirje tõstetakse ümber, kui valid käsu Aseta"
+msgstr[1] "%d valitud kirjet tõstetakse ümber, kui valid käsu Aseta"
 
 #: ../src/file-manager/fm-directory-view.c:6001
 #, c-format
@@ -2998,7 +3001,7 @@ msgstr "Näita selles menüüd olevate skriptide kataloogi"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6823
 msgid "Prepare the selected files to be moved with a Paste command"
-msgstr "Valitud failid ettevalmistamine liigutamiseks käsuga Aseta failid"
+msgstr "Valitud failid ettevalmistamine ümbertõstmiseks käsuga Aseta failid"
 
 #. name, stock id
 #. label, accelerator
@@ -3105,7 +3108,7 @@ msgstr "Kust_uta"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6869
 msgid "Delete each selected item, without moving to the Trash"
-msgstr "Kustuta kõik valitud kirjed ilma prügikasti liigutamata"
+msgstr "Kõigi valitud kirjete kustutamine ilma neid prügikasti tõstmata"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6872
@@ -3230,7 +3233,7 @@ msgstr "Ava kaust navigeerimisaknas"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6932
 msgid "Prepare this folder to be moved with a Paste command"
-msgstr "Valmistab avatud kausta ette liigutamiseks Aseta käsuga"
+msgstr "Avatud kausta ettevalmistamine prügikasti tõstmiseks Aseta käsuga"
 
 #. name, stock id
 #. label, accelerator
@@ -3374,7 +3377,7 @@ msgstr ""
 #: ../src/file-manager/fm-directory-view.c:9737
 #: ../src/file-manager/fm-directory-view.c:9838
 msgid "An invalid drag type was used."
-msgstr "Kasutati vale lohistamistüüpi"
+msgstr "Kasutati vale lohistamisliiki"
 
 #: ../src/file-manager/fm-ditem-page.c:337
 #: ../src/file-manager/fm-ditem-page.c:348
@@ -3433,7 +3436,7 @@ msgstr "Nimi \"%s\" on siin kataloogis juba kasutusel. Palun vali teine nimi."
 msgid ""
 "There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
 msgstr ""
-"\"%s\" ei ole siin kataloogis. Võib-olla on seda äsja liigutatud või "
+"\"%s\" ei ole siin kataloogis. Võib-olla on see äsja ümber tõstetud või "
 "kustutatud?"
 
 #: ../src/file-manager/fm-error-reporting.c:117
@@ -3822,7 +3825,7 @@ msgstr "Sisukord:"
 
 #: ../src/file-manager/fm-properties-window.c:2256
 msgid "Basic"
-msgstr "Alus"
+msgstr "Põhiline"
 
 #. Name label
 #: ../src/file-manager/fm-properties-window.c:2286
@@ -3833,7 +3836,7 @@ msgstr[1] "_Nimed:"
 
 #: ../src/file-manager/fm-properties-window.c:2305
 msgid "Type:"
-msgstr "Tüüp:"
+msgstr "Liik:"
 
 #: ../src/file-manager/fm-properties-window.c:2307
 #: ../src/file-manager/fm-properties-window.c:2317
@@ -3877,7 +3880,7 @@ msgstr "Viit osutab:"
 
 #: ../src/file-manager/fm-properties-window.c:2346
 msgid "MIME type:"
-msgstr "MIME tüüp:"
+msgstr "MIME-liik:"
 
 #: ../src/file-manager/fm-properties-window.c:2355
 msgid "Modified:"
@@ -4343,7 +4346,7 @@ msgstr "Ühendumine serverisse"
 
 #: ../src/nautilus-connect-server-dialog.c:822
 msgid "Service _type:"
-msgstr "_Teenuse tüüp:"
+msgstr "_Teenuse liik:"
 
 #: ../src/nautilus-connect-server-dialog.c:890
 msgid "Browse _Network"
@@ -4765,7 +4768,7 @@ msgstr "Tarkvara"
 #: ../src/nautilus-image-properties-page.c:259
 #, c-format
 msgid "<b>Image Type:</b> %s (%s)\n"
-msgstr "<b>Pildi tüüp:</b> %s (%s)\n"
+msgstr "<b>Pildi liik:</b> %s (%s)\n"
 
 #: ../src/nautilus-image-properties-page.c:261
 #, c-format
@@ -4985,12 +4988,12 @@ msgstr "_Järjehoidjad"
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:428
 msgid "Open New _Window"
-msgstr "_Uue akna avamine"
+msgstr "Ava _uus aken"
 
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:429
 msgid "Open another Nautilus window for the displayed location"
-msgstr "Ava näidatud asukoha jaoks uus Nautiluse aken"
+msgstr "Näidatud asukoha jaoks Nautiluse uue akna avamine"
 
 #: ../src/nautilus-navigation-window-menus.c:431
 msgid "Close _All Windows"
@@ -4999,7 +5002,7 @@ msgstr "Sulge _kõik aknad"
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:432
 msgid "Close all Navigation windows"
-msgstr "Sulgeb kõik navigatsiooniaknad"
+msgstr "Kõigi navigatsiooniakende sulgemine"
 
 #: ../src/nautilus-navigation-window-menus.c:434
 msgid "_Location..."
@@ -5344,7 +5347,7 @@ msgstr "Asukoht"
 
 #: ../src/nautilus-query-editor.c:138
 msgid "File Type"
-msgstr "Failitüüp"
+msgstr "Faili liik"
 
 #: ../src/nautilus-query-editor.c:280
 msgid "Select folder to search in"
@@ -5388,7 +5391,7 @@ msgstr "Tekstifail"
 
 #: ../src/nautilus-query-editor.c:551
 msgid "Select type"
-msgstr "Vali tüüp"
+msgstr "Vali liik"
 
 #: ../src/nautilus-query-editor.c:635
 msgid "Any"
@@ -5396,7 +5399,7 @@ msgstr "Kõik"
 
 #: ../src/nautilus-query-editor.c:650
 msgid "Other Type..."
-msgstr "Muu tüüp..."
+msgstr "Muu liik..."
 
 #: ../src/nautilus-query-editor.c:936
 msgid "Remove this criterion from the search"
@@ -5837,6 +5840,3 @@ msgstr "Praeguse vaate suurendusastme seadmine"
 #: ../src/network-scheme.desktop.in.h:2
 msgid "View your network servers in the Nautilus file manager"
 msgstr "Vaata oma võrgu servereid Nautiluse failihalduris."
-
-#~ msgid "Always use _text-entry location bar"
-#~ msgstr "Kas_utatakse alati tekstisisestamisega asukohariba"
