--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-15  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* configure.in: Fix intltool req.
+
 2006-08-08  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
