--- a/po/de.po
+++ b/po/de.po
@@ -36,7 +36,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-07-31 17:53+0200\n"
-"PO-Revision-Date: 2006-07-31 18:01+0200\n"
+"PO-Revision-Date: 2006-08-15 23:17+0200\n"
 "Last-Translator: Hendrik Richter <hendrikr@gnome.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -4424,7 +4424,7 @@ msgstr ""
 "könnten das Problem beheben.\n"
 "\n"
 "Bonobo konnte die Datei Nautilus_Shell.server nicht finden. Ein Grund "
-"hierfür könnte es sein, dass ein LD_LIBRARY_PATH das Verzeichnis der bonobo-"
+"hierfür könnte es sein, dass ein LD_LIBRARY_PATH den Ordner der bonobo-"
 "activation-Bibliothek nicht enthält. Ein anderer möglicher Grund wäre eine "
 "defekte Installation, bei der die Datei Nautilus_Shell.server fehlt.\n"
 "\n"
