--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-08-17  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-recent.c (nautilus_recent_add_file):
+	Fix double free.
+	Patch from Rouslan Solomakhin
+
 2006-08-15  Federico Mena Quintero  <federico@novell.com>
 
 	* src/nautilus-main.c (main): Call setlocale() before we try to
