Fixes small mistakes in Catalan translation

--- a/po/ca.po
+++ b/po/ca.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: nautilus 2.9.91\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-06-10 17:07+0200\n"
-"PO-Revision-Date: 2006-06-10 17:09+0200\n"
+"PO-Revision-Date: 2006-08-17 17:09+0200\n"
 "Last-Translator: Jordi Mallach <jordi@sindominio.net>\n"
 "Language-Team: Catalan <tradgnome@softcatala.org>\n"
 "MIME-Version: 1.0\n"
@@ -2305,7 +2305,7 @@ msgstr "24"
 #: ../libnautilus-private/nautilus-global-preferences.c:516
 #, c-format
 msgid "%s's Home"
-msgstr "Carpeta incial de l'usuari %s"
+msgstr "Carpeta inicial de l'usuari %s"
 
 #: ../libnautilus-private/nautilus-icon-container.c:2116
 msgid "The selection rectangle"
@@ -3055,7 +3055,7 @@ msgstr "Visualitza o modifica les propietats de cada element seleccionat"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6750
 msgid "View or modify the properties of the open folder"
-msgstr "Visualitza o modifica les propietats de la carperta oberta"
+msgstr "Visualitza o modifica les propietats de la carpeta oberta"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6753
@@ -3980,7 +3980,7 @@ msgstr[1] "%d elements, amb una mida total de %s"
 
 #: ../src/file-manager/fm-properties-window.c:1935
 msgid "(some contents unreadable)"
-msgstr "(part del contimgut és il·legibles)"
+msgstr "(part del contingut és il·legible)"
 
 #. Also set the title field here, with a trailing carriage return &
 #. * space if the value field has two lines. This is a hack to get the
@@ -5280,14 +5280,14 @@ msgid "Rename..."
 msgstr "Canvia el nom..."
 
 #: ../src/nautilus-places-sidebar.c:1261
-#, fuzzy
+#
 msgid "_Mount"
-msgstr "_Quant a"
+msgstr "_Munta"
 
 #: ../src/nautilus-places-sidebar.c:1268
-#, fuzzy
+#
 msgid "_Unmount"
-msgstr "Desm_unta el volum"
+msgstr "Desm_unta"
 
 #
 #: ../src/nautilus-places-sidebar.c:1507
@@ -5485,7 +5485,7 @@ msgid "File Type"
 msgstr "Tipus de fitxer"
 
 #: ../src/nautilus-query-editor.c:280
-#, fuzzy
+#
 msgid "Select folder to search in"
 msgstr "Seleccioneu la carpeta on cercar"
 
@@ -5523,7 +5523,7 @@ msgstr "Pdf / Postscript"
 
 #: ../src/nautilus-query-editor.c:479
 msgid "Text File"
-msgstr "Fitxet de text"
+msgstr "Fitxer de text"
 
 #: ../src/nautilus-query-editor.c:551
 msgid "Select type"
@@ -5738,9 +5738,9 @@ msgstr ""
 "gestió dels vostres fitxers i la resta del sistema."
 
 #: ../src/nautilus-window-menus.c:454
-#, fuzzy
+#
 msgid "Copyright © 1999-2006 The Nautilus authors"
-msgstr "Copyright © 1999-2005 Els autors del Nautilus"
+msgstr "Copyright © 1999-2006 Els autors del Nautilus"
 
 #. Translators should localize the following string
 #. * which will be displayed at the bottom of the about
