--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-17  Jordi Mas <jmas@softcatala.org>
+
+	* ca.po: Fixes small mistakes in Catalan translation
+
 2006-08-17  Clytie Siddall <clytie@riverland.net.au>
 
 	* vi.po: Updated Vietnamese translation.
