--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-19  Matic Žgur  <mr.zgur@gmail.com>
+
+	* sl.po: Updated Slovenian translation.
+
 2006-08-17  Jordi Mas <jmas@softcatala.org>
 
 	* ca.po: Fixes small mistakes in Catalan translation
