--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-20  Wouter Bolsterlee  <uws+gnome@xs4all.nl>
+
+	* nl.po: Translation updated by Wouter Bolsterlee.
+
 2006-08-19  Matic Žgur  <mr.zgur@gmail.com>
 
 	* sl.po: Updated Slovenian translation.
