Don't crash when quickly changing user or group. Patch from Christian
2006-08-21  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-properties-window.c:
	Don't crash when quickly changing user or group.
	Patch from Christian Neumair

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-08-21  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-properties-window.c:
+	Don't crash when quickly changing user or group.
+	Patch from Christian Neumair
+
 2006-08-17  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-recent.c (nautilus_recent_add_file):
