Update for release
2006-08-21  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Major changes in 2.15.92 are:
+* Fix crash on changing owner/group of file
+* Fix double free
+* Make sure all strings are displayed translated
+
 Major changes in 2.15.91 are:
 * Use gtk recent files code
 * Fix file change notification regression
