--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-08-21  Alexander Larsson  <alexl@redhat.com>
 
+	* NEWS:
+	Update for release
+	
+2006-08-21  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-properties-window.c:
 	Don't crash when quickly changing user or group.
 	Patch from Christian Neumair
