--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2006-08-21  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.15.92 ===
+
+2006-08-21  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release
 	
