--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,5 @@
+=== nautilus 2.15.92 ===
+
 2006-08-20  Wouter Bolsterlee  <uws+gnome@xs4all.nl>
 
 	* nl.po: Translation updated by Wouter Bolsterlee.
