Fix double free
2006-08-22  Alexander Larsson  <alexl@redhat.com>

	* libbackground/preferences.c:
	Fix double free

	* configure.in:
	Release a 2.15.92.1 with fix

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-08-22  Alexander Larsson  <alexl@redhat.com>
+
+	* libbackground/preferences.c:
+	Fix double free
+
+	* configure.in:
+	Release a 2.15.92.1 with fix
+
 2006-08-21  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
