--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Major changes in 2.15.92.1 are:
+* Fix crash on startup
+
 Major changes in 2.15.92 are:
 * Fix crash on changing owner/group of file
 * Fix double free
