--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2006-08-22  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.15.92.1 ===
+	
+2006-08-22  Alexander Larsson  <alexl@redhat.com>
+
 	* libbackground/preferences.c:
 	Fix double free
 
