--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-08-22  Jordi Mas <jmas@softcatala.org>
+
+	* ca.po: Updates Catalan translation
+
 === nautilus 2.15.92 ===
 
 2006-08-20  Wouter Bolsterlee  <uws+gnome@xs4all.nl>
